--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preline": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
