--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "animate.css": "^4.1.1",
     "preline": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
